[package]
name = "rsomics-vcf-tstv-strat"
version = "0.1.2"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-tstv-strat"
authors = ["Zane Leong <efd@live.com>"]
description = "Ts/Tv stratified by ALT allele count or QUAL threshold — reimplements vcftools --TsTv-by-count / --TsTv-by-qual"
readme = "README.md"
keywords = ["vcf", "bioinformatics", "variant-calling", "genomics", "vcftools"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "rsomics-vcf-tstv-strat"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_tstv_strat"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
